// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`в магазине должны быть страницы: главная 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="Application"
      >
        <nav
          class="navbar navbar-expand-sm navbar-light bg-light"
        >
          <div
            class="container"
          >
            <a
              class="Application-Brand navbar-brand"
              href="/"
            >
              Example store
            </a>
            <button
              aria-label="Toggle navigation"
              class="Application-Toggler navbar-toggler"
            >
              <span
                class="navbar-toggler-icon"
              />
            </button>
            <div
              class="Application-Menu collapse navbar-collapse"
            >
              <div
                class="navbar-nav"
              >
                <a
                  class="nav-link"
                  href="/catalog"
                >
                  Catalog
                </a>
                <a
                  class="nav-link"
                  href="/delivery"
                >
                  Delivery
                </a>
                <a
                  class="nav-link"
                  href="/contacts"
                >
                  Contacts
                </a>
                <a
                  class="nav-link"
                  href="/cart"
                >
                  Cart
                </a>
              </div>
            </div>
          </div>
        </nav>
        <div
          class="container pt-4"
        >
          <div
            class="Home"
          >
            <div
              class="row"
            >
              <div
                class="col bg-secondary text-white py-4 bg-opacity-75"
              >
                <p
                  class="display-3"
                >
                  Welcome to Example store!
                </p>
                <p
                  class="lead"
                >
                  Culpa perspiciatis corporis facilis fugit similique
                </p>
                <p
                  class="lead"
                >
                  Cum aut ut eveniet rem cupiditate natus veritatis quia
                </p>
              </div>
            </div>
            <div
              class="row mb-4"
            >
              <div
                class="col-12 col-md-4 bg-light py-3"
              >
                <h1>
                  Quickly
                </h1>
                <p
                  class="lead"
                >
                  Odio aut assumenda ipsam amet reprehenderit. Perspiciatis qui molestiae qui tempora quisquam
                </p>
              </div>
              <div
                class="col-12 col-md-4 bg-light py-3"
              >
                <h1>
                  Qualitatively
                </h1>
                <p
                  class="lead"
                >
                  Ut nisi distinctio est non voluptatem. Odio aut assumenda ipsam amet reprehenderit
                </p>
              </div>
              <div
                class="col-12 col-md-4 bg-light py-3"
              >
                <h1>
                  Inexpensive
                </h1>
                <p
                  class="lead"
                >
                  Perspiciatis qui molestiae qui tempora quisquam. Ut nisi distinctio est non voluptatem
                </p>
              </div>
            </div>
            <div
              class="row mb-4"
            >
              <div
                class="col-12py-3"
              >
                <p>
                  Sed voluptatum quis voluptates laudantium incidunt laudantium. Illo non quos eos vel ipsa. Explicabo itaque est optio neque rerum provident enim qui sed. Corrupti commodi voluptatem vero soluta hic.
                </p>
                <p>
                  Modi corporis consectetur aliquid sit cum tenetur enim. Sed voluptatum quis voluptates laudantium incidunt laudantium. Illo non quos eos vel ipsa. Explicabo itaque est optio neque rerum provident enim qui sed. Corrupti commodi voluptatem vero soluta hic.
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="Application"
    >
      <nav
        class="navbar navbar-expand-sm navbar-light bg-light"
      >
        <div
          class="container"
        >
          <a
            class="Application-Brand navbar-brand"
            href="/"
          >
            Example store
          </a>
          <button
            aria-label="Toggle navigation"
            class="Application-Toggler navbar-toggler"
          >
            <span
              class="navbar-toggler-icon"
            />
          </button>
          <div
            class="Application-Menu collapse navbar-collapse"
          >
            <div
              class="navbar-nav"
            >
              <a
                class="nav-link"
                href="/catalog"
              >
                Catalog
              </a>
              <a
                class="nav-link"
                href="/delivery"
              >
                Delivery
              </a>
              <a
                class="nav-link"
                href="/contacts"
              >
                Contacts
              </a>
              <a
                class="nav-link"
                href="/cart"
              >
                Cart
              </a>
            </div>
          </div>
        </div>
      </nav>
      <div
        class="container pt-4"
      >
        <div
          class="Home"
        >
          <div
            class="row"
          >
            <div
              class="col bg-secondary text-white py-4 bg-opacity-75"
            >
              <p
                class="display-3"
              >
                Welcome to Example store!
              </p>
              <p
                class="lead"
              >
                Culpa perspiciatis corporis facilis fugit similique
              </p>
              <p
                class="lead"
              >
                Cum aut ut eveniet rem cupiditate natus veritatis quia
              </p>
            </div>
          </div>
          <div
            class="row mb-4"
          >
            <div
              class="col-12 col-md-4 bg-light py-3"
            >
              <h1>
                Quickly
              </h1>
              <p
                class="lead"
              >
                Odio aut assumenda ipsam amet reprehenderit. Perspiciatis qui molestiae qui tempora quisquam
              </p>
            </div>
            <div
              class="col-12 col-md-4 bg-light py-3"
            >
              <h1>
                Qualitatively
              </h1>
              <p
                class="lead"
              >
                Ut nisi distinctio est non voluptatem. Odio aut assumenda ipsam amet reprehenderit
              </p>
            </div>
            <div
              class="col-12 col-md-4 bg-light py-3"
            >
              <h1>
                Inexpensive
              </h1>
              <p
                class="lead"
              >
                Perspiciatis qui molestiae qui tempora quisquam. Ut nisi distinctio est non voluptatem
              </p>
            </div>
          </div>
          <div
            class="row mb-4"
          >
            <div
              class="col-12py-3"
            >
              <p>
                Sed voluptatum quis voluptates laudantium incidunt laudantium. Illo non quos eos vel ipsa. Explicabo itaque est optio neque rerum provident enim qui sed. Corrupti commodi voluptatem vero soluta hic.
              </p>
              <p>
                Modi corporis consectetur aliquid sit cum tenetur enim. Sed voluptatum quis voluptates laudantium incidunt laudantium. Illo non quos eos vel ipsa. Explicabo itaque est optio neque rerum provident enim qui sed. Corrupti commodi voluptatem vero soluta hic.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`в магазине должны быть страницы: каталог 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="Application"
      >
        <nav
          class="navbar navbar-expand-sm navbar-light bg-light"
        >
          <div
            class="container"
          >
            <a
              class="Application-Brand navbar-brand"
              href="/"
            >
              Example store
            </a>
            <button
              aria-label="Toggle navigation"
              class="Application-Toggler navbar-toggler"
            >
              <span
                class="navbar-toggler-icon"
              />
            </button>
            <div
              class="Application-Menu collapse navbar-collapse"
            >
              <div
                class="navbar-nav"
              >
                <a
                  aria-current="page"
                  class="nav-link active"
                  href="/catalog"
                >
                  Catalog
                </a>
                <a
                  class="nav-link"
                  href="/delivery"
                >
                  Delivery
                </a>
                <a
                  class="nav-link"
                  href="/contacts"
                >
                  Contacts
                </a>
                <a
                  class="nav-link"
                  href="/cart"
                >
                  Cart
                </a>
              </div>
            </div>
          </div>
        </nav>
        <div
          class="container pt-4"
        >
          <div
            class="Catalog"
          >
            <div
              class="row"
            >
              <div
                class="col"
              >
                <h1>
                  Catalog
                </h1>
              </div>
            </div>
            <div
              class="row"
            >
              LOADING
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="Application"
    >
      <nav
        class="navbar navbar-expand-sm navbar-light bg-light"
      >
        <div
          class="container"
        >
          <a
            class="Application-Brand navbar-brand"
            href="/"
          >
            Example store
          </a>
          <button
            aria-label="Toggle navigation"
            class="Application-Toggler navbar-toggler"
          >
            <span
              class="navbar-toggler-icon"
            />
          </button>
          <div
            class="Application-Menu collapse navbar-collapse"
          >
            <div
              class="navbar-nav"
            >
              <a
                aria-current="page"
                class="nav-link active"
                href="/catalog"
              >
                Catalog
              </a>
              <a
                class="nav-link"
                href="/delivery"
              >
                Delivery
              </a>
              <a
                class="nav-link"
                href="/contacts"
              >
                Contacts
              </a>
              <a
                class="nav-link"
                href="/cart"
              >
                Cart
              </a>
            </div>
          </div>
        </div>
      </nav>
      <div
        class="container pt-4"
      >
        <div
          class="Catalog"
        >
          <div
            class="row"
          >
            <div
              class="col"
            >
              <h1>
                Catalog
              </h1>
            </div>
          </div>
          <div
            class="row"
          >
            LOADING
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`в магазине должны быть страницы: контакты 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="Application"
      >
        <nav
          class="navbar navbar-expand-sm navbar-light bg-light"
        >
          <div
            class="container"
          >
            <a
              class="Application-Brand navbar-brand"
              href="/"
            >
              Example store
            </a>
            <button
              aria-label="Toggle navigation"
              class="Application-Toggler navbar-toggler"
            >
              <span
                class="navbar-toggler-icon"
              />
            </button>
            <div
              class="Application-Menu collapse navbar-collapse"
            >
              <div
                class="navbar-nav"
              >
                <a
                  class="nav-link"
                  href="/catalog"
                >
                  Catalog
                </a>
                <a
                  class="nav-link"
                  href="/delivery"
                >
                  Delivery
                </a>
                <a
                  aria-current="page"
                  class="nav-link active"
                  href="/contacts"
                >
                  Contacts
                </a>
                <a
                  class="nav-link"
                  href="/cart"
                >
                  Cart
                </a>
              </div>
            </div>
          </div>
        </nav>
        <div
          class="container pt-4"
        >
          <div
            class="Contacts"
          >
            <div
              class="row"
            >
              <div
                class="col"
              >
                <h1>
                  Contacts
                </h1>
                <p>
                  Ut non consequatur aperiam ex dolores. Voluptatum harum consequatur est totam. Aut voluptatum aliquid aut optio et ea. Quaerat et eligendi minus quasi. Culpa voluptatem voluptatem dolores molestiae aut quos iure. Repellat aperiam ut aliquam iure. Veritatis magnam quisquam et dolorum recusandae aut.
                </p>
                <p>
                  Molestias inventore illum architecto placeat molestias ipsam facilis ab quo. Rem dolore cum qui est reprehenderit assumenda voluptatem nisi ipsa. Unde libero quidem. Excepturi maiores vel quia. Neque facilis nobis minus veniam id. Eum cum eveniet accusantium molestias voluptas aut totam laborum aut. Ea molestiae ullam et. Quis ea ipsa culpa eligendi ab sit ea error suscipit. Quia ea ut minus distinctio quam eveniet nihil. Aut voluptate numquam ipsa dolorem et quas nemo.
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="Application"
    >
      <nav
        class="navbar navbar-expand-sm navbar-light bg-light"
      >
        <div
          class="container"
        >
          <a
            class="Application-Brand navbar-brand"
            href="/"
          >
            Example store
          </a>
          <button
            aria-label="Toggle navigation"
            class="Application-Toggler navbar-toggler"
          >
            <span
              class="navbar-toggler-icon"
            />
          </button>
          <div
            class="Application-Menu collapse navbar-collapse"
          >
            <div
              class="navbar-nav"
            >
              <a
                class="nav-link"
                href="/catalog"
              >
                Catalog
              </a>
              <a
                class="nav-link"
                href="/delivery"
              >
                Delivery
              </a>
              <a
                aria-current="page"
                class="nav-link active"
                href="/contacts"
              >
                Contacts
              </a>
              <a
                class="nav-link"
                href="/cart"
              >
                Cart
              </a>
            </div>
          </div>
        </div>
      </nav>
      <div
        class="container pt-4"
      >
        <div
          class="Contacts"
        >
          <div
            class="row"
          >
            <div
              class="col"
            >
              <h1>
                Contacts
              </h1>
              <p>
                Ut non consequatur aperiam ex dolores. Voluptatum harum consequatur est totam. Aut voluptatum aliquid aut optio et ea. Quaerat et eligendi minus quasi. Culpa voluptatem voluptatem dolores molestiae aut quos iure. Repellat aperiam ut aliquam iure. Veritatis magnam quisquam et dolorum recusandae aut.
              </p>
              <p>
                Molestias inventore illum architecto placeat molestias ipsam facilis ab quo. Rem dolore cum qui est reprehenderit assumenda voluptatem nisi ipsa. Unde libero quidem. Excepturi maiores vel quia. Neque facilis nobis minus veniam id. Eum cum eveniet accusantium molestias voluptas aut totam laborum aut. Ea molestiae ullam et. Quis ea ipsa culpa eligendi ab sit ea error suscipit. Quia ea ut minus distinctio quam eveniet nihil. Aut voluptate numquam ipsa dolorem et quas nemo.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`в магазине должны быть страницы: условия доставки 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="Application"
      >
        <nav
          class="navbar navbar-expand-sm navbar-light bg-light"
        >
          <div
            class="container"
          >
            <a
              class="Application-Brand navbar-brand"
              href="/"
            >
              Example store
            </a>
            <button
              aria-label="Toggle navigation"
              class="Application-Toggler navbar-toggler"
            >
              <span
                class="navbar-toggler-icon"
              />
            </button>
            <div
              class="Application-Menu collapse navbar-collapse"
            >
              <div
                class="navbar-nav"
              >
                <a
                  class="nav-link"
                  href="/catalog"
                >
                  Catalog
                </a>
                <a
                  aria-current="page"
                  class="nav-link active"
                  href="/delivery"
                >
                  Delivery
                </a>
                <a
                  class="nav-link"
                  href="/contacts"
                >
                  Contacts
                </a>
                <a
                  class="nav-link"
                  href="/cart"
                >
                  Cart
                </a>
              </div>
            </div>
          </div>
        </nav>
        <div
          class="container pt-4"
        >
          <div
            class="Delivery"
          >
            <div
              class="row"
            >
              <div
                class="col"
              >
                <h1>
                  Delivery
                </h1>
                <p>
                  Deserunt occaecati tempora. Qui occaecati est aliquam. Enim qui nulla ipsam. Incidunt impedit enim consequuntur amet at consequuntur vero. Dolor et ad facere asperiores iste est praesentium quaerat iure. Quibusdam mollitia autem quos voluptas quia est doloremque corporis et. Sed fuga quasi esse perspiciatis fugit maxime. Qui quidem amet.
                </p>
                <img
                  class="Image w-25 mb-4"
                  src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkMAYAADkANVKH3ScAAAAASUVORK5CYII="
                />
                <p>
                  Dolores magnam consequatur iste aliquam qui sint non ab. Culpa saepe omnis. Recusandae vel aperiam voluptates harum. Perspiciatis qui molestiae qui tempora quisquam. Mollitia voluptatum minus laboriosam. Dolor maiores possimus repudiandae praesentium hic eos. Veritatis et repellat.
                </p>
                <p>
                  Pariatur nisi nobis hic ut facilis sunt rerum id error. Soluta nihil quisquam quia rerum illo. Ipsam et suscipit est iure incidunt quasi et eum. Culpa libero dignissimos recusandae. In magni sapiente non voluptas molestias. Deserunt quos quo placeat sunt. Ea necessitatibus dolores eaque ex aperiam sunt eius. Saepe aperiam aut. Quaerat natus consequatur aut est id saepe et aut facilis.
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="Application"
    >
      <nav
        class="navbar navbar-expand-sm navbar-light bg-light"
      >
        <div
          class="container"
        >
          <a
            class="Application-Brand navbar-brand"
            href="/"
          >
            Example store
          </a>
          <button
            aria-label="Toggle navigation"
            class="Application-Toggler navbar-toggler"
          >
            <span
              class="navbar-toggler-icon"
            />
          </button>
          <div
            class="Application-Menu collapse navbar-collapse"
          >
            <div
              class="navbar-nav"
            >
              <a
                class="nav-link"
                href="/catalog"
              >
                Catalog
              </a>
              <a
                aria-current="page"
                class="nav-link active"
                href="/delivery"
              >
                Delivery
              </a>
              <a
                class="nav-link"
                href="/contacts"
              >
                Contacts
              </a>
              <a
                class="nav-link"
                href="/cart"
              >
                Cart
              </a>
            </div>
          </div>
        </div>
      </nav>
      <div
        class="container pt-4"
      >
        <div
          class="Delivery"
        >
          <div
            class="row"
          >
            <div
              class="col"
            >
              <h1>
                Delivery
              </h1>
              <p>
                Deserunt occaecati tempora. Qui occaecati est aliquam. Enim qui nulla ipsam. Incidunt impedit enim consequuntur amet at consequuntur vero. Dolor et ad facere asperiores iste est praesentium quaerat iure. Quibusdam mollitia autem quos voluptas quia est doloremque corporis et. Sed fuga quasi esse perspiciatis fugit maxime. Qui quidem amet.
              </p>
              <img
                class="Image w-25 mb-4"
                src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkMAYAADkANVKH3ScAAAAASUVORK5CYII="
              />
              <p>
                Dolores magnam consequatur iste aliquam qui sint non ab. Culpa saepe omnis. Recusandae vel aperiam voluptates harum. Perspiciatis qui molestiae qui tempora quisquam. Mollitia voluptatum minus laboriosam. Dolor maiores possimus repudiandae praesentium hic eos. Veritatis et repellat.
              </p>
              <p>
                Pariatur nisi nobis hic ut facilis sunt rerum id error. Soluta nihil quisquam quia rerum illo. Ipsam et suscipit est iure incidunt quasi et eum. Culpa libero dignissimos recusandae. In magni sapiente non voluptas molestias. Deserunt quos quo placeat sunt. Ea necessitatibus dolores eaque ex aperiam sunt eius. Saepe aperiam aut. Quaerat natus consequatur aut est id saepe et aut facilis.
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
